2d-anordnung mit captions (noch schlecht positioniert)

--- a/App/css/bubble_chart.css
+++ b/App/css/bubble_chart.css
@@ -40,6 +40,12 @@ a, a:visited, a:active {
   cursor: default;
 }
 
+.yAxisTitle {
+  font-size: 21px;
+  fill: #aaa;
+  cursor: default;
+}
+
 .tooltip {
 	position: absolute;
 	top: 100px;
