--- a/Template/NEU/index.html
+++ b/Template/NEU/index.html
@@ -34,7 +34,7 @@
 
 				 <!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Zur visualisierung</a>
+						<a href="index.html" class="logo">Zur Visualisierung</a>
 					</header> 
 
 				<!-- Nav -->
@@ -44,6 +44,7 @@
 							<li class="active"><a href="#story">Story</a></li>
                             <li class="active"><a href="#daten"> Sprung zu Daten</a></li>
 							<li class="active"><a href="#überuns">Über uns</a></li>
+							<li class="active"><a href="#quellen">Quellen</a></li>
 						</ul>
 						<ul class="icons">
                             <!--
@@ -65,50 +66,48 @@
 									</a></h2>
                                     <h3> Daten Schweizerischer Nationalfonds</h3>
                                     
+                                    	<div class="image main"><img src="images/pic01.jpg" alt="" />
                                 
-                                Das Datenset, welches uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen über die Projektoutputs der durch den SNF finanzierten Projekte. 
-                                <br>
+                                </div>
+                                    
+                                 	</header>   
+                        
+                                <p> 
+								Das Datenset, welches uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen über die Projektoutputs der durch den SNF finanzierten Projekte. </p>
+								<p>
                                 Das Datenset erhebt keinen Anspruch auf Vollständigkeit, da die Angabe der Outputdaten durch die Forschenden auf Freiwilligkeit basiert und nicht alle Typen der angegebenen Outputdaten veröffentlicht wurden.
-                                <br>
-                                Die ausgewerteten Outputdaten beziehen sich auf einen Zeitraum von 20XX-200YY und wurden nach folgenden Parametern aufbereitet: 
-                                <br>
+								</p>
+								<p>
+                                Die ausgewerteten Outputdaten beziehen sich auf einen Zeitraum von 2011-2018 und wurden nach folgenden Parametern aufbereitet: 
+								</p>
                                 <ul>
                                     <li> Outputtypen (Art des Outputs) </li>
                                     <li> Institut </li>
                                     <li> Investitionsvolumen </li>
                                     <li> Disziplin </li>
                                 </ul>
-                               
-                                   <br> 
-                                    --> Mehr Dazu unter: Verlinkung (ev. direkt im Text)
-                                <br>
-                                Wichtig: Die Visualisierung der Outputdaten stellt lediglich Korrelationen dar und lässt daher keine Schlüsse über Kausalzusammenhänge zu. 
-                                        
-                                        
-                               
-                                
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-                                
-								<ul class="actions">
-									<li><a href="http://p3.snf.ch/Pages/DataAndDocumentation.aspx" class="button big">Zu den Originaldaten</a></li>
-								</ul>
-							</article>
-                        
+ 
+								<p>
+								--> Mehr Dazu unter: Verlinkung (ev. direkt im Text) <br>
 
-                <!-- Post -->
+                                Wichtig: Die Visualisierung der Outputdaten stellt lediglich Korrelationen dar und lässt daher keine Schlüsse über Kausalzusammenhänge zu. 
+                                   </p>
+								     
+								
+								Anmerkung: Man fixiert nicht die Kategoriengrösse nach dem Investitionsvolumen sondern nach der Anzahl Outputs. 
+								
+                              
+							            
+						     
+           
+                <!-- Daten -->
+							
 							<section class="post">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2 id="daten"><a href="#">Daten <br />
+									<h2 id="daten"><a href="#"><br> Daten <br />
 									</a></h2>
-									<p>Einleitung zu den Daten</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" />
-                                
-                                </div>
 								<p>
-                                
                                 Folgende Informationen der Outputdaten wurden im Rahmen dieser Visualisierung verarbeitet:
                                 </p>
                                 
@@ -218,8 +217,11 @@
 							</section> -->
 
                 	<!-- Box -->
-									<h2 id="story"><a href="#">Story<br />
+						         <header class="major">		
+									<h2 id="story"><a href="#">Story/Fragestellungen<br />
 									</a></h2>
+								</header>
+								
 									<div class="box">
 										<p>
                                         
@@ -234,17 +236,20 @@
 									<hr/> 
                   
                         <!-- über Uns -->
-                        
-                        <h3 id="überuns"><a href="#">Über Uns<br />
-									</a></h3>
+                        <header class="major">
+                        <h2 id="überuns"><a href="#">Über Uns<br />
+									</a></h2>
+								</header>
+								
 									<!-- <p><span class="image left"><img src="images/pic08.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p> -->
 									<p><span class="image right"><img src="images/pic09.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. .</p>
 
 									<hr />
                         
                 <!-- Table -->
-									<h2>Daten und Quellen</h2>
-
+								<header class="major">
+									<h2 id="quellen"><a href="X">Quellen</a></h2>
+								</header>
 									<!-- <h3>Default</h3>-->
 									<div class="table-wrapper">
 										<table>
@@ -279,11 +284,11 @@
 										</table>
 									</div>
 
-                        
-				<!-- Footer -->
+                 </div>        
+				<!-- Footer-->
 							 <footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<!--<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
@@ -291,11 +296,12 @@
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a> -->
+								
 								</div>
 							</footer> 
 
-					</div> 
+					
 
 				<!-- Footer -->
 				<!--	<footer id="footer">
@@ -345,6 +351,7 @@
 					</footer> 
                 
                 -->
+</body>
 
 				<!-- Copyright -->
 					<div id="copyright">
@@ -361,5 +368,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-	</body>
+	
 </html>
