--- a/Template/NEU/assets/css/main.css
+++ b/Template/NEU/assets/css/main.css
@@ -1726,7 +1726,7 @@
 	}
 
 	h2 {
-		font-size: 1.75rem;
+		font-size: 2rem;
 		line-height: 1.3;
 		margin: 0 0 1.5rem 0;
 	}
@@ -1853,6 +1853,7 @@
 		margin-bottom: 2rem;
 		padding: 1.5rem;
 	}
+	
 
 		.box > :last-child,
 		.box > :last-child > :last-child,
@@ -2733,7 +2734,7 @@
 		}
 
 		header > h2 + p {
-			font-size: 1rem;
+			font-size: 2rem;
 			margin-top: -0.75rem;
 		}
 
@@ -3593,13 +3594,13 @@
 			}
 
 			#main > .post header.major > h1, #main > .post header.major h2 {
-				font-size: 3rem;
+				font-size: 2rem;
 				line-height: 1.1;
 				margin: 0 0 2rem 0;
 			}
 
 			#main > .post.featured {
-				text-align: center;
+				text-align: left;
 			}
 
 			@media screen and (max-width: 1280px) {
