--- a/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
+++ b/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
@@ -33,13 +33,13 @@
               <a class="nav-link js-scroll-trigger" href="#Visualisierung">Visualisierung</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Datensatz">Datensatz</a>
+              <a class="nav-link js-scroll-trigger" href="#Grundlagen">Grundlagen</a>
+            </li>
+			 <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#Quellen">Quellen</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#uberuns">Über uns</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#Kontakt">Kontakt</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,9 @@
       <div class="container text-center">
 		  
         <h1>Open Data Visualisierung </h1>
-        <p class="lead">Datensatz des Schweizerischen Nationalfonds</p>
+        <p class="lead">Outuptdaten des Schweizerischen Nationalfonds</p>
+		  
+		  <p> Eine Webapplikaiton entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), erstellt im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern im Frühlingssemester 2018</p>
 		
       </div>
     </header>
@@ -60,22 +62,30 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Visualisierung</h2>
-            <p class="lead"> Hier kommen die Bubbelis rein</p>
+            <p> Durch Klicken auf... wird das jeweilige .. geöffnet. <br>
+			  2D
+				...
+			  </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="Datensatz" class="bg-light">
+    <section id="Grundlagen" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Die Daten</h2>
-            <p>Der Datensatz, welcher uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen über die verschiedenen Projektoutpust der durch den SNF finanzierten Projekte.</p>
+            <h2>Grundlagen</h2>
 			  
-			<p>Der Datensatz erhebt keinen Anspruch auf Vollständigkeit, da die Dateneingabe durch die Forschenden auf Freiwilligkeit basiert und nicht alle Typen der angegebenen Outputdaten veröffentlicht wurden</p>
+			<p><strong> Der Schweizerische Nationalfonds.</strong> <br>
+			  dkdkdkdkdkkdkd</p>
+			  
+            <p><strong>Die Daten.</strong> <br>
+				Der Datensatz, welcher uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen über die verschiedenen Projektoutputs der durch den SNF finanzierten Projekte.<br>
+				Der Datensatz erhebt keinen Anspruch auf Vollständigkeit, da die Dateneingabe durch die Forschenden auf Freiwilligkeit basiert und nicht alle Typen der angegebenen Outputdaten veröffentlicht wurden</p>
 			
-			<p>Die Outputdaten beziehen sich auf einen Zeitraum von 2011-2018 und wurden nach folgenden Parametern aufbereitet:  </p>
+			<p><strong>Parameter.</strong><br>
+				Die Outputdaten beziehen sich auf einen Zeitraum von 2011-2018 und wurden nach folgenden Parametern aufbereitet:  </p>
 			  <ul>
               <li>Output-Typ: Art des generierten Outputs</li>
               <li>Institution: </li>
@@ -87,46 +97,73 @@
       </div>
     </section>
 	  
+	      <section id="Quellen" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Quellen</h2>
+            <p> Hier kommen die Quellen rein</p>
+			  
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Daten/ Inhalte</th>
+      <th scope="col">Quellen</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>SNF-Datensatz</td>
+      <td>LINK</td>
+    </tr>
+	<tr>
+      <td>Introbild</td>
+      <td>LINK</td>
+    </tr>
+    <tr>
+      <td>Web-Site Template</td>
+      <td>https://startbootstrap.com</td>
+    </tr>
+    <tr>
+      <td>D3-Template</td>
+      <td>LINK</td>
+    </tr>
+	<tr>
+      <td>Quellcode der Applikation</td>
+      <td>LINK</td>
+    </tr>
+  </tbody>
+</table>
+          </div>
+        </div>
+      </div>
+    </section>
+	  
 	<section id="uberuns" class="bg-light">
     <div class="container">
-      <h1 class="my-4">About Us
-        <small>It's Nice to Meet You!</small>
-      </h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
 
-      <!-- Team Members Row -->
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="my-4">Wer wir sind</h2>
+          <h2 class="my-4">Kontakt</h2>
+			<p> Bei Fragen zur Visualisierung stehen wir Ihnen gerne zur Verfügung. </p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="">
           <h3>Niklaus Maurer</h3>
-            <p><small>Psychologie/ Wirtschaft</small> </p>
-          <p>Etwas über Niklaus schreiben?/ Zitat?!</p>
+			<p><small>Student BSc Psychologie/Wirtschaft <br> 
+				maurerniklaus@students.unibe.ch
+				</small> </p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="">
           <h3>Debora Balzli </h3>
-			 <p><small>Psychologie/ Wirtschaft</small> </p>
-          <p>Sonst noch etwas schreiben...</p>
+			 <p><small>Studentin BSc Psychologie/Wirtschaft <br> balzlidebora@students.unibe.ch</small> </p>
+			
         </div>
       </div>
 
     </div>
 		</section>
-    <!-- /.container -->
-
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Kontakt</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
