--- a/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
+++ b/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
@@ -49,8 +49,8 @@
     <header img src="bilder/bluebubbles.jpg" alt="Mein Bild" class="img-responsive">
       <div class="container text-center">
 		  
-        <h1>Open Data Visualisierung </h1>
-        <p class="lead">Outuptdaten des Schweizerischen Nationalfonds</p>
+        <h1>Output der Forschung </h1>
+        <p class="lead">Visualisierung von Open Data</p>
 		  
 		  <p> Eine Webapplikaiton entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), erstellt im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern im Frühlingssemester 2018</p>
 		
@@ -78,19 +78,31 @@
             <h2>Grundlagen</h2>
 			  
 			<p><strong> Der Schweizerische Nationalfonds.</strong> <br>
-			  dkdkdkdkdkkdkd</p>
+			 Der SNF hat vom Bund den Auftrag, die Forschung und den wissenschaftlichen Nachwuchs in der Schweiz mit öffentlichen Mitteln zu fördern. Seine Strategie und Ziele sind auf eine optimale Aufgragserfüllung ausgerichetet und sollen dazu beitragen, den Forschungsplatz Schweiz insgesamt zu stärken.<br>
+			<a href=http://www.snf.ch/de/fokusForschung/newsroom/Seiten/news-131126-output-der-forschung.aspx> Mehr Informationen </a>
+			</p>
 			  
-            <p><strong>Die Daten.</strong> <br>
-				Der Datensatz, welcher uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen über die verschiedenen Projektoutputs der durch den SNF finanzierten Projekte.<br>
-				Der Datensatz erhebt keinen Anspruch auf Vollständigkeit, da die Dateneingabe durch die Forschenden auf Freiwilligkeit basiert und nicht alle Typen der angegebenen Outputdaten veröffentlicht wurden</p>
+            <p><strong>Die Daten.</strong> <br> 
+				Der Datensatz, welcher uns vom Schweizerischen Nationalfonds (SNF) zur Verfügung gestellt wurde, beinhaltet Informationen zum Output der von ihm unterstützten Forschung. </p>
+			  <p>
+				Der Datensatz erhebt keinen Anspruch auf Vollständigkeit, da die Dateneingabe durch die Forschenden auf Freiwilligkeit basiert und nicht alle Typen der angegebenen Outputdaten veröffentlicht wurden.<br> 
+			  <a href= http://p3.snf.ch/Pages/DataAndDocumentation.aspx> Zum Datensatz </a>
+			  </p>
+			  <p>
+				  <strong>Interpretation.</strong> <br>
+				  Es ist zu beachten, dass es schwierig ist, den finanzierten Output genau zu identifizieren und zu quantifizieren. In der Visualisierung ist nur der direkte Output aus der Forschung ersichtlich (z.B. Anzahl entwickelter Software); indirekte Effekte (sog. "Outcome") und die schlussendliche Wirkung auf die Gesellschaft und Wirtschaft (sog. "Impact") werden oft erst auf nationaler oder gar internationaler Ebene sichtbar.<br>
+				  Die Ergebnisse der visualisierten Kategorienvergleichesollte zudem als korrelativ und nicht als kausal betrachtet werden. <br>
+				 <a href=http://www.snf.ch/de/fokusForschung/newsroom/Seiten/news-131126-output-der-forschung.aspx> Mehr Informationen </a>
+			 </p>
+			 
 			
-			<p><strong>Parameter.</strong><br>
-				Die Outputdaten beziehen sich auf einen Zeitraum von 2011-2018 und wurden nach folgenden Parametern aufbereitet:  </p>
+			<p><strong>Kategorien.</strong><br>
+				Die für die Visualisierung verwendeten Daten beziehen sich auf einen Zeitraum von 2011-2018 können nach folgenden Kategorien sortiert werden  </p>
 			  <ul>
-              <li>Output-Typ: Art des generierten Outputs</li>
-              <li>Institution: </li>
-              <li>Investitionsvolumen</li>
-              <li>Disziplin:</li>
+              <li><strong> Output-Typ.</strong> Art des generierten Outputs</li>
+              <li><strong>Institution.</strong> Forschungsinstitution an dem der Output generiert wurde </li>
+              <li><strong>Bewilligter Betrag.</strong> Geldbetrag in CHF, welcher für die  Forschung bewilligt wurde </li>
+              <li><strong>Disziplin.</strong>Hauptdisziplin in der der Output generiert wurde </li>
             </ul>
           </div>
         </div>
@@ -141,25 +153,27 @@
 	  
 	<section id="uberuns" class="bg-light">
     <div class="container">
-
+		<div class="col-lg-8 mx-auto">
       <div class="row">
+	
         <div class="col-lg-12">
           <h2 class="my-4">Kontakt</h2>
 			<p> Bei Fragen zur Visualisierung stehen wir Ihnen gerne zur Verfügung. </p>
         </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="Niklaus">
           <h3>Niklaus Maurer</h3>
 			<p><small>Student BSc Psychologie/Wirtschaft <br> 
 				maurerniklaus@students.unibe.ch
 				</small> </p>
         </div>
-        <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="Debby">
           <h3>Debora Balzli </h3>
 			 <p><small>Studentin BSc Psychologie/Wirtschaft <br> balzlidebora@students.unibe.ch</small> </p>
-			
+	
         </div>
+			</div>
       </div>
 
     </div>
