Website Teil 3 + Buttons html

--- a/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
+++ b/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
@@ -39,20 +39,21 @@
               <a class="nav-link js-scroll-trigger" href="#Quellen">Quellen</a>
             </li>
 			  <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Kontakt">Kontakt</a>
+              <a class="nav-link js-scroll-trigger" href="#ueberuns">Über uns</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <header img src="bilder/bluebubbles.jpg" alt="Mein Bild" class="img-responsive">
+    <header class="masthead" style="background-image: url(bilder/farbigelichter.jpg)">
+
       <div class="container text-center">
 		  
         <h1>Output der Forschung </h1>
-        <p class="lead">Visualisierung von Open Data</p>
+        <p class="lead">Visualisierung von Open Data des Schweizerischen Nationalfonds</p>
 		  
-		  <p> Eine Webapplikaiton entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), erstellt im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern im Frühlingssemester 2018</p>
+		  <p> Die Webapplikation wurde im Rahmen der entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), erstellt im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern im Frühlingssemester 2018</p>
 		
       </div>
     </header>
@@ -62,9 +63,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Visualisierung</h2>
-            <p> Durch Klicken auf... wird das jeweilige .. geöffnet. <br>
-			  2D
-				...
+            <p>
 			  </p>
           </div>
         </div>
@@ -77,7 +76,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Grundlagen</h2>
 			  
-			<p><strong> Der Schweizerische Nationalfonds.</strong> <br>
+			<p> <strong> Der Schweizerische Nationalfonds.</strong> <br>
 			 Der SNF hat vom Bund den Auftrag, die Forschung und den wissenschaftlichen Nachwuchs in der Schweiz mit öffentlichen Mitteln zu fördern. Seine Strategie und Ziele sind auf eine optimale Aufgragserfüllung ausgerichetet und sollen dazu beitragen, den Forschungsplatz Schweiz insgesamt zu stärken.<br>
 			<a href=http://www.snf.ch/de/fokusForschung/newsroom/Seiten/news-131126-output-der-forschung.aspx> Mehr Informationen </a>
 			</p>
@@ -151,9 +150,9 @@
       </div>
     </section>
 	  
-	<section id="uberuns" class="bg-light">
+	<section id="ueberuns" class="bg-light">
     <div class="container">
-		<div class="col-lg-8 mx-auto">
+	<div class="col-lg-8 mx-auto">
       <div class="row">
 	
         <div class="col-lg-12">
