--- a/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
+++ b/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
@@ -51,9 +51,9 @@
       <div class="container text-center">
 		  
         <h1>Output der Forschung </h1>
-        <p class="lead">Visualisierung von Open Data des Schweizerischen Nationalfonds</p>
+        <p class="lead">Visualisierung von Open Data</p>
 		  
-		  <p> Die Webapplikation wurde im Rahmen der entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), erstellt im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern im Frühlingssemester 2018</p>
+		  <p> Eine Webapplikation entwickelt zur Visualisierung von Daten des Schweizerischen Nationalfonds (SNF), im Rahmen der <a href=http://www.digitale-nachhaltigkeit.unibe.ch/studium/open_data_vorlesung/index_ger.html> Open Data Vorlesung </a>an der Universität Bern.</p>
 		
       </div>
     </header>
@@ -63,6 +63,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Visualisierung</h2>
+			<h5>Outputs von SNF-finanzierter Forschung aus den Jahren 2011-2018 </h5>
             <p>
 			  </p>
           </div>
@@ -90,18 +91,19 @@
 			  <p>
 				  <strong>Interpretation.</strong> <br>
 				  Es ist zu beachten, dass es schwierig ist, den finanzierten Output genau zu identifizieren und zu quantifizieren. In der Visualisierung ist nur der direkte Output aus der Forschung ersichtlich (z.B. Anzahl entwickelter Software); indirekte Effekte (sog. "Outcome") und die schlussendliche Wirkung auf die Gesellschaft und Wirtschaft (sog. "Impact") werden oft erst auf nationaler oder gar internationaler Ebene sichtbar.<br>
-				  Die Ergebnisse der visualisierten Kategorienvergleichesollte zudem als korrelativ und nicht als kausal betrachtet werden. <br>
+				  Die Ergebnisse der visualisierten Kategorienvergleiche sollte zudem als korrelativ- und nicht als kausal betrachtet werden. <br>
 				 <a href=http://www.snf.ch/de/fokusForschung/newsroom/Seiten/news-131126-output-der-forschung.aspx> Mehr Informationen </a>
 			 </p>
 			 
 			
 			<p><strong>Kategorien.</strong><br>
-				Die für die Visualisierung verwendeten Daten beziehen sich auf einen Zeitraum von 2011-2018 können nach folgenden Kategorien sortiert werden  </p>
+				Die für die Visualisierung verwendeten Daten beziehen sich auf einen Zeitraum von 2011-2018 können nach folgenden Kategorien sortiert werden:  </p>
 			  <ul>
               <li><strong> Output-Typ.</strong> Art des generierten Outputs</li>
               <li><strong>Institution.</strong> Forschungsinstitution an dem der Output generiert wurde </li>
-              <li><strong>Bewilligter Betrag.</strong> Geldbetrag in CHF, welcher für die  Forschung bewilligt wurde </li>
-              <li><strong>Disziplin.</strong>Hauptdisziplin in der der Output generiert wurde </li>
+              <li><strong>Bewilligte Mittel.</strong> Geldbetrag in CHF, welcher für die  Forschung bewilligt wurde </li>
+              <li><strong>Forschungsdisziplin.</strong>Hauptdisziplin in der der Output generiert wurde </li>
+			<li><strong>Förderungskategorie.</strong> ... </li>
             </ul>
           </div>
         </div>
@@ -157,20 +159,18 @@
 	
         <div class="col-lg-12">
           <h2 class="my-4">Kontakt</h2>
-			<p> Bei Fragen zur Visualisierung stehen wir Ihnen gerne zur Verfügung. </p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center mb-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="Niklaus">
           <h3>Niklaus Maurer</h3>
 			<p><small>Student BSc Psychologie/Wirtschaft <br> 
 				maurerniklaus@students.unibe.ch
 				</small> </p>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center mb-4">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center mb-4">
           <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="Debby">
           <h3>Debora Balzli </h3>
-			 <p><small>Studentin BSc Psychologie/Wirtschaft <br> balzlidebora@students.unibe.ch</small> </p>
-	
+			<p><small>Studentin BSc Psychologie/Wirtschaft <br> balzlidebora@students.unibe.ch</small> </p>
         </div>
 			</div>
       </div>
