Checkbox on/off

--- a/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
+++ b/Template/V3/startbootstrap-scrolling-nav-gh-pages/index.html
@@ -115,31 +115,31 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Quellen</h2>
-            <p> Hier kommen die Quellen rein</p>
+            
 			  
 <table class="table table-striped">
   <thead>
     <tr>
       <th scope="col">Daten/ Inhalte</th>
-      <th scope="col">Quellen</th>
+      <th scope="col">Quellen</th> <br>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>SNF-Datensatz</td>
-      <td>LINK</td>
+      <td><a href="http://p3.snf.ch/Pages/DataAndDocumentation.aspx">P3 Schweizerischer Nationalfonds</a></td>
     </tr>
 	<tr>
       <td>Introbild</td>
-      <td>LINK</td>
+      <td> <a href="https://www.pexels.com/photo/defocused-image-of-lights-255379/"> Pexels</a></td>
     </tr>
     <tr>
       <td>Web-Site Template</td>
-      <td>https://startbootstrap.com</td>
+      <td><a href="https://startbootstrap.com">Startbootstrap</a></td>
     </tr>
     <tr>
       <td>D3-Template</td>
-      <td>LINK</td>
+      <td><a href="https://d3js.org/">d3js</a></td>
     </tr>
 	<tr>
       <td>Quellcode der Applikation</td>
@@ -158,19 +158,19 @@
       <div class="row">
 	
         <div class="col-lg-12">
-          <h2 class="my-4">Kontakt</h2>
+          <h2 class="my-4">Über uns</h2> <br>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="Niklaus">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Niklaus.jpg" alt="Niklaus" id="Niklaus">
           <h3>Niklaus Maurer</h3>
-			<p><small>Student BSc Psychologie/Wirtschaft <br> 
+			<p><small>Student BSc Psychologie <br> 
 				maurerniklaus@students.unibe.ch
 				</small> </p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="Debby">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="bilder/Debby.jpg" alt="Debby" id="Debby">
           <h3>Debora Balzli </h3>
-			<p><small>Studentin BSc Psychologie/Wirtschaft <br> balzlidebora@students.unibe.ch</small> </p>
+			<p><small>Studentin BSc Psychologie <br> balzlidebora@students.unibe.ch</small> </p>
         </div>
 			</div>
       </div>
