--- a/App/css/bubble_chart.css
+++ b/App/css/bubble_chart.css
@@ -13,7 +13,10 @@ a, a:visited, a:active {
 }
 
 #bubblecharttoolbar {
-  margin-top: 10px;
+  margin-top: 30px;
+margin:0
+padding:0;
+text-align: center;	
 }
 
 .xAxisTitle {
@@ -61,7 +64,7 @@ a, a:visited, a:active {
 text-decoration: none;
 background-color: none;}
 
-
+/* bezieht sich auf die Häcken-Boxen der Check-Boxes. diese werden so nicht angezeigt */
 div label input {
    margin-right:100px;
 	display: none;
@@ -70,6 +73,70 @@ body {
     font-family:sans-serif;
 }
 
+
+/* ClearAll-Button 
+#clearAll {
+    background-color:#EFEFEF;
+	height: 20px;
+    border-radius:1px;
+    border:0px solid #D0D0D0;
+    overflow:auto;
+    float:left;
+}
+#clearAll label{
+    float:left;
+    width: 10.0em;
+}
+
+#clearAll label span 
+{
+    text-align:center;
+    padding:3px 0px;
+    display:block;
+}
+
+#clearAll label input{
+    position:absolute;
+    top:-20px;
+}
+
+#clearAll input:checked + span {
+    background-color:#92c0e0;
+}
+
+*/
+
+/* ShowAll-Button 
+#showall {
+
+    background-color:#EFEFEF;
+	height: 30px;
+    border-radius:1px;
+    border:0px solid #D0D0D0;
+    overflow:auto;
+    float:left;
+}
+
+#showall label{
+    float:left;
+    width: 20.0em;
+}
+
+#showall label span 
+{
+    text-align:center;
+    padding:3px 0px;
+    display:block;
+}
+
+#showalllabel input{
+    position:absolute;
+    top:-20px;
+}
+*/
+
+
+/* Output-Type-Buttons */
 #ck-button {
     margin:4px;
     background-color:#EFEFEF;
@@ -130,7 +197,3 @@ body {
     background-color:#e1e1e1;
 
 }
-
-
-/* Einfügen der Farben oben
-range(['#92c0e0', '#2a8dd4', '#e6f2fa', '#004d85', '#b1b1b1', '#e1e1e1', '#663399', '#b95f00', '#F93']); */
